<resources>
    <string name="app_name">MyErp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Διαχείριση Αποθηκών</string>
    <string name="nav_header_subtitle">kwstas147@gmail.com</string>
    <string name="nav_header_desc">Navigation</string>
    <string name="action_settings">Settings</string>
    <string name="fab_email">Send Email</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Πρωτόκολλο</string>
    <string name="menu_slideshow">Ημερολόγιο</string>
    <string name="add">Add</string>
    <string name="field_name">Field Name</string>
    <string name="total_0">Total: 0</string>
    <string name="enter_value">Enter value</string>
    <string name="remove">Remove</string>
    <string name="recycler_view_description">List of items</string>

    <!-- Additional strings -->

    <string name="new_balance">New Balance</string>
    <string name="remove_button_text">Remove</string>
    <string name="error_fill_all_fields">Please fill in all fields.</string>
    <string name="error_invalid_credentials">Invalid username or password.</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username_hint">Enter your username</string>
    <string name="password_hint">Enter your password</string>
    <string name="confirm_password_hint">Confirm your password</string>
    <string name="back">Back</string>
    <string name="login_success">Login successful</string>
    <string name="login_error">Invalid username or password</string>
    <string name="register_success">Registration successful</string>
    <string name="register_error">Registration failed</string>
    <string name="field_total">Υπόλοιπο: %d</string>
    <string name="share">Share</string>
    <string name="amount">Amount</string>
    <string name="old_balance">Old Balance</string>
    <string name="comment">Comment</string>
    <string name="add_log_entry">Add Log Entry</string>
    <string name="delete_by_field_name">Delete by Field Name</string>
    <string name="search_day_month_year">Search (day, month, year)</string>
    <string name="use_biometric">Use Biometric Authentication</string>
    <string name="biometric_prompt_title">Biometric Login</string>
    <string name="biometric_prompt_subtitle">Authenticate using your biometrics</string>
    <string name="biometric_prompt_cancel">Cancel</string>
    <string name="error_biometric_auth_failed">Biometric authentication failed</string>
    <string name="list_of_comments">List of comments</string>
    <string name="write_a_comment">Write a comment</string>
    <string name="add1">Add</string>
    <string name="delete">Delete</string>
    <string name="add_field">Add Field</string>
    <string name="enter_field_name">Enter field name</string>
</resources>
