<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Username"
        android:hint="@string/username_hint"
        android:inputType=""
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Password"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/confirmPasswordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Confirm Password"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        tools:ignore="VisualLintButtonSize" />
</LinearLayout>